# MagicRename

./: CMakeLists.txt  Compress.bat  Deploy.bat  MagicRename.rc  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  z.bat
